# spruce

./: pyproject.toml
collections/: _exc.py
collections/_sets/: _misc.py
exc/: _exc.py
iri/: _codecs.py
types/_converters/: _core.py  _misc.py  _num.py
